# startup-success-predictor

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  Dockerfile  IMPLEMENTATION.md  QUICKSTART.md  README.md  WARP.md  docker-compose.yml  dvc.yaml  env.example  pyproject.toml
.dvc/: config
configs/: config.yaml
configs/data/: startup.yaml
configs/model/: classifier.yaml  gan.yaml
configs/train/: baseline.yaml  default.yaml
data/: preds_dummy.csv  test_dummy.csv
scripts/: convert_trt.sh
startup_success_predictor/: __init__.py  app.py  cli.py  config.py  eval_kfold.py  export_onnx.py  infer.py  train.py
startup_success_predictor/data/: datamodule.py  dataset_processing.py  download.py  preprocessing.py
startup_success_predictor/models/: classifier_module.py  gan_module.py
startup_success_predictor/models/components/: classifier.py  gan.py
startup_success_predictor/utils/: metrics.py  plotting.py
tests/: test_basic.py
